--- a/DiabetesGeek/UI/Login/Login.storyboard
+++ b/DiabetesGeek/UI/Login/Login.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--LoginVC-->
@@ -17,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5tv-8c-DMo" userLabel="ImageVerticalCenteringView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5tv-8c-DMo" userLabel="ImageCenteringView">
                                 <rect key="frame" x="180" y="20" width="240" height="220"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DiabetesGeekIconTemp" translatesAutoresizingMaskIntoConstraints="NO" id="FdX-aG-9dx">
@@ -37,6 +38,9 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="KAA-BY-0dZ" firstAttribute="centerX" secondItem="5tv-8c-DMo" secondAttribute="centerX" id="AF6-Lr-CRJ"/>
+                                    <constraint firstAttribute="height" constant="120" id="ALB-I8-RvY">
+                                        <variation key="heightClass=compact" constant="300"/>
+                                    </constraint>
                                     <constraint firstItem="KAA-BY-0dZ" firstAttribute="centerY" secondItem="5tv-8c-DMo" secondAttribute="centerY" id="Avx-Dw-fQo"/>
                                     <constraint firstItem="FdX-aG-9dx" firstAttribute="centerY" secondItem="5tv-8c-DMo" secondAttribute="centerY" id="MTX-HG-XjJ"/>
                                     <constraint firstAttribute="width" constant="240" id="eGV-bv-wQq"/>
@@ -47,16 +51,19 @@
                                         <exclude reference="KAA-BY-0dZ"/>
                                     </mask>
                                     <mask key="constraints">
+                                        <exclude reference="ALB-I8-RvY"/>
                                         <exclude reference="AF6-Lr-CRJ"/>
                                         <exclude reference="Avx-Dw-fQo"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=compact">
                                     <mask key="subviews">
-                                        <exclude reference="FdX-aG-9dx"/>
-                                        <include reference="KAA-BY-0dZ"/>
+                                        <include reference="FdX-aG-9dx"/>
+                                        <exclude reference="KAA-BY-0dZ"/>
                                     </mask>
                                     <mask key="constraints">
+                                        <include reference="ALB-I8-RvY"/>
+                                        <exclude reference="eGV-bv-wQq"/>
                                         <include reference="AF6-Lr-CRJ"/>
                                         <include reference="Avx-Dw-fQo"/>
                                     </mask>
@@ -89,15 +96,37 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="0oX-zH-3vb" firstAttribute="centerX" secondItem="Ach-3D-IG8" secondAttribute="centerX" id="1I4-9L-t5T"/>
+                            <constraint firstItem="5tv-8c-DMo" firstAttribute="leading" secondItem="Ach-3D-IG8" secondAttribute="leadingMargin" priority="999" id="4po-Hs-l6W">
+                                <variation key="heightClass=compact" constant="0.0"/>
+                            </constraint>
                             <constraint firstItem="5tv-8c-DMo" firstAttribute="top" secondItem="GUt-qc-WqY" secondAttribute="bottom" id="6ov-s2-fOD"/>
                             <constraint firstItem="5tv-8c-DMo" firstAttribute="centerX" secondItem="Ach-3D-IG8" secondAttribute="centerX" id="Gzk-Tf-lxo"/>
+                            <constraint firstItem="5tv-8c-DMo" firstAttribute="trailing" secondItem="0oX-zH-3vb" secondAttribute="leading" id="LTf-IP-DJI"/>
                             <constraint firstItem="7dw-WR-wYG" firstAttribute="top" secondItem="0oX-zH-3vb" secondAttribute="bottom" constant="54" id="Os5-OE-ZMF">
                                 <variation key="heightClass=compact-widthClass=compact" constant="25"/>
                             </constraint>
                             <constraint firstItem="0oX-zH-3vb" firstAttribute="centerY" secondItem="Ach-3D-IG8" secondAttribute="centerY" id="OzO-uj-cCG"/>
+                            <constraint firstItem="5tv-8c-DMo" firstAttribute="centerY" secondItem="0oX-zH-3vb" secondAttribute="centerY" id="Yqk-wO-0U5"/>
                             <constraint firstItem="7dw-WR-wYG" firstAttribute="centerX" secondItem="Ach-3D-IG8" secondAttribute="centerX" id="fxX-Im-dNc"/>
                             <constraint firstItem="0oX-zH-3vb" firstAttribute="top" secondItem="5tv-8c-DMo" secondAttribute="bottom" id="qtv-wS-wZL"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="4po-Hs-l6W"/>
+                                <exclude reference="LTf-IP-DJI"/>
+                                <exclude reference="Yqk-wO-0U5"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <include reference="4po-Hs-l6W"/>
+                                <exclude reference="6ov-s2-fOD"/>
+                                <exclude reference="Gzk-Tf-lxo"/>
+                                <include reference="LTf-IP-DJI"/>
+                                <include reference="Yqk-wO-0U5"/>
+                                <exclude reference="qtv-wS-wZL"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JDB-g7-OvN" userLabel="First Responder" sceneMemberID="firstResponder"/>
